bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:1: error: Missing closing brace `}' assumed here
def nearHundred(n:Int): Boolean = {
^NearHundred:1: error: expected class or object definition
def nearHundred(n:Int): Boolean = {
^